--- a/1910.00972/version2.tex
+++ b/1910.00972/version2.tex
@@ -1,6 +1,42 @@
 \documentclass[12pt]{article}
-\pdfoutput=1
 \usepackage{jheppub}
+\linespread{1.05}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 %\usepackage{showlabels}
 \usepackage[utf8]{inputenc}
 \usepackage{verbatim}
@@ -77,7 +113,7 @@ An important question which we do not address in this paper is when these wormho
 \section{A model for information conservation}
 
 \bfig
-\includegraphics[height=4.3cm]{octopi2.pdf}
+\includegraphics[height=3.3cm]{octopi2.pdf}
 \caption{Two steps of the ``black hole evaporation'' process for our first model.  The surfaces $\gamma$ and $\gamma'$ give two possible HRT surfaces homologous either to the ``Hawking radiation'' exits or the ``black hole'' exit.  As the octopus grows more and more legs, the length of the ``ankle bracelets'' $\gamma$ increases and the length of the ``headband'' $\gamma'$ decreases: the crossover point where the headband becomes shorter is the ``Page time'' of the model.}\label{octopi} 
 \efig
 We now present our model for unitary black hole evaporation.  The basic idea is that we want to start with a single pure-state black hole whose size is many times that of the $AdS$ length, and then allow it to evaporate by emission of $AdS$-sized black holes which are parametrically smaller than the one we started with.  To make the analysis simple, we will arrange for this emission to place each such black hole into its own separate asymptotically-AdS spacetime.  As the evaporation proceeds, these asymptotically-AdS regions will be connected by a wormhole with an increasing number of exits.  Holographically we can describe this as follows: we begin with a pure state in the tensor product of many copies of some holographic $CFT_2$, which is a product between a highly-excited pure state in one of the copies and the vacuum in all of the others.  We then couple the CFTs together using a Hamiltonian which is carefully designed to evolve this state to a sequence of others which are prepared by cutting a CFT Riemann surface of higher and higher genus.  This is easier to visualize than to describe, we give an illustration of how the spatial geometry changes over a pair of time steps in figure \ref{octopi}.\footnote{This process does not quite work for the first two steps of the radiation, since it is only once we have at least three exits that we can adjust the sizes of the exits independently.  To fix this we could add some handles behind the horizon to the initial pure state with one exit, as in figure \ref{infolossworm} below, but to avoid complicating the figure here we will instead just begin our evaporation at three exits: we begin with an ``almost pure'' black hole which has radiated only two ``Hawking quanta'' so far.} To avoid confusion we emphasize that this dynamics constitutes a modification of usual bulk dynamics for this system: the topology changes, the area of the black hole horizon decreases with time, and there are direct couplings between the boundary CFTs.  Nonetheless at any fixed time the state is one which can be given a standard holographic interpretation, and in particular for which the boundary entropies can be computed using the standard quantum extremal surface technology.
