--- a/1910.00972/version2.tex
+++ b/1910.00972/version2.tex
@@ -87,7 +87,7 @@ The black hole information problem is one of the great challenges facing physics
 
 The main technical result of \cite{Almheiri:2019psf,Penington:2019npb} was the discovery of an previously-unknown bulk quantum extremal surface, which at late times lies just inside the event horizon of a black hole evaporating via its coupling to an auxiliary system.  Since the area of this horizon is decreasing as the evaporation proceeds, the area (plus quantum corrections) of this quantum extremal surface is also decreasing.  Therefore if this surface can be argued to be the correct quantum extremal surface for computing the von Neumann entropy of the auxiliary system, its decreasing area (plus quantum corrections) maps directly to the decreasing entropy in the latter piece of the Page curve, as expected for unitary evaporation \cite{Almheiri:2019psf,Penington:2019npb}.  In \cite{Almheiri:2019psf} this surface was found explicitly for the special case of two-dimensional conformal matter coupled to Jackiw-Teitelboim gravity, while in \cite{Penington:2019npb} it was constructed somewhat less explicitly in higher dimensions assuming spherical symmetry.  In both cases, the new quantum extremal surface only dominates the entropy calculation a scrambling time after the Page time; the analyses of~\cite{Almheiri:2019psf,Penington:2019npb} show that the surface evolves in a spacelike direction, providing a bulk realization of the Hayden-Preskill protocol so long as this new quantum extremal surface correctly defines the quantum corrected entanglement wedge. Ref. \cite{Almheiri:2019hni} then studied a special case of the results of \cite{Almheiri:2019psf} where the conformal matter is taken to have a semiclassical holographic dual, leading to an effective \textit{three-dimensional} description of the entropy of the conformal matter fields.  
 
-There is something puzzling about the results of \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni}.  This is that all calculations were done within the framework of perturbative bulk gravity coupled to matter fields; precisely the regime where Hawking's calculations show information loss.  This is not necessarily a logical contradiction with the Page curve they found using quantum extremal surfaces: perturbative bulk quantum gravity is not expected to be holographic by itself, so there is not necessarily any useful interpretation for its quantum extremal surfaces.  On the other hand, the fact that this ``wrong'' calculation gives the ``right'' answer seems likely to be telling us something very interesting about the information problem; we just need to interpret it carefully.  In particular we need to be unambiguous about what any particular model is telling us about the following question: \textit{if we, living in a gravitational system, were to collect the full Hawking radiation from an evaporated black hole and carefully study it using mirrors, beam splitters, etc., would we find a pure state or a mixed state?}  In \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni} no firm answer was given to this question, and in particular in \cite{Almheiri:2019hni} it was suggested that the answer can depend on ``how we obtained the state''.    We are not satisfied with such ambiguity, and removing it is the goal of this paper.  To that end we present a pair of holographic models of black hole evaporation, for one of which the answer to the italicized question is ``yes'' while for the other it is ``no''.\footnote{It is ok for \textit{different} models to give different answers to this question: what is not ok is for the \textit{same} model to give us different answers!}  Moreover in both cases the answer is the same regardless of whether we compute it using the quantum extremal surface prescription or evaluate it directly in the CFT.  After presenting our models we will revisit the results of \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni}, emphasizing that the tension between the ``bulk'' and ``boundary'' Page curves they found is only present if one is not clear about the relationship between the bulk theory and its holographic dual.   In our models this relationship is explicit, and there is no ambiguity in the Page curve.  
+There is something puzzling about the results of \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni}.  This is that all calculations were done within the framework of perturbative bulk gravity coupled to matter fields; precisely the regime where Hawking's calculations show information loss.  This is not necessarily a logical contradiction with the Page curve they found using quantum extremal surfaces: perturbative bulk quantum gravity is not expected to be holographic by itself, so there is not necessarily any useful interpretation for its quantum extremal surfaces.  On the other hand, the fact that this ``wrong'' calculation gives the ``right'' answer seems likely to be telling us something very interesting about the information problem; we just need to interpret it carefully.  In particular we need to be unambiguous about what any particular model is telling us about the following question: \textit{if we, living in a gravitational system, were to collect the full Hawking radiation from an evaporated black hole and carefully study it using mirrors, beam splitters, etc., would we find a pure state or a mixed state?}  In \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni} no firm answer was given to this question, and in particular in \cite{Almheiri:2019hni} it was suggested that the answer can depend on ``how we obtained the state''.    We are not satisfied with such ambiguity, and removing it is the goal of this paper.  To that end we present a pair of holographic models of black hole evaporation. In one the answer to the italicized question is ``pure'' while for the other it is ``mixed''.\footnote{It is ok for \textit{different} models to give different answers to this question: what is not ok is for the \textit{same} model to give us different answers!}  Moreover in both cases the answer is the same regardless of whether we compute it using the quantum extremal surface prescription or evaluate it directly in the CFT.  After presenting our models we will revisit the results of \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni}, emphasizing that the tension between the ``bulk'' and ``boundary'' Page curves they found is only present if one is not clear about the relationship between the bulk theory and its holographic dual.   In our models this relationship is explicit, and there is no ambiguity in the Page curve.  
 
 
 
@@ -162,7 +162,7 @@ We now turn to our second model, which is designed to ``holographically simulate
 We will model information loss holographically by again introducing many copies of a single holographic CFT, and beginning in a highly excited pure state in one of the copies and the vacuum in all the others.  We then again couple the CFTs together, but now with a different coupling and a different interpretation: each interaction preserves the purity of the initial ``black hole'' CFT, but decreases its energy and creates a thermofield double pair between two of the other copies.  We will interpret one half of this pair as being part of the baby universe, and the other half as being part of the Hawking radiation.  The baby universes need to be modeled as additional CFTs since in a setting where we take information loss seriously, they are additional degrees of freedom which are independent from those outside of the black hole.  We then continue bringing in additional copies and decreasing the energy of the initial state (see figure \ref{infolossworm} for an illustration).\footnote{Whatever information there is about how the black hole was made also ends up in the baby universe, for simplicity we ignore this.} We further require that the sum of the energy in the ``black hole'' and ``Hawking radiation'' CFTs is conserved, since baby universes should carry zero energy to be viable (recall that really they are closed gravitational systems without boundary). Thus the lengths of $\gamma$ and $\gamma'$ continue to be given by \eqref{Lg} and \eqref{Lgp}.  
 
 \bfig
-\includegraphics[height=2.7cm]{infoworm.pdf}
+\includegraphics[height=2.5cm]{infoworm.pdf}
 \caption{The ``black hole evaporation process'' for our second model.  Each step adds an additional copy of the thermofield double state connecting a ``baby universe'' CFT and a ``Hawking radiation'' CFT.  $\gamma'$ is the extremal area surface near the original black hole exterior, and in this model it plays a role analogous to that of the new quantum extremal surface found in \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni}, but it is null-homologous so it is never the HRT surface for either the ``black hole'' CFT or the ``radiation'' CFTs.  Indeed the HRT surface for the radiation CFTs is always $\gamma$.  We have added a handle to the initial black hole to model whatever pure-state matter we collapsed to form it, in the last step this handle will disappear and the black hole system will be left in vacuum.}\label{infolossworm}
 \efig
 Eventually the original black hole has radiated down to the vacuum, and we are left just with a set of bipartite wormholes connecting ``baby universe'' CFTs to ``Hawking radiation'' CFTs.  The key point is that now the HRT surface for the Hawking radiation is \textit{always} given by $\gamma$ in figure \ref{infolossworm}: the radiation CFTs are never homologous to the surface $\gamma'$, so there is never a crossover and the von Neumann entropy of the radiation grows linearly until the end, as expected in a theory of information loss.  Moreover since the boundary of the CFT containing the original black hole is always null-homologous, the von Neumann entropy of this black hole is always zero, consistent with the no-hair theorems.  Thus we see that in this model the quantum extremal surface prescription can be perfectly consistent with information loss, provided that we model the bulk in the way that most accurately reflects figure \ref{infoloss}.
@@ -179,7 +179,7 @@ Of course that is not a new argument, it is just the old argument that AdS/CFT s
 \ei 
 Calculation one is what we really want to do, but calculation two is what was actually done in \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni}.  One might hope that the two calculations agree, but they do not.  The reason they do not agree is that they are \textit{not} holographically dual to each other.  Instead we claim that calculation one is dual to a bulk dynamics analogous to our first model, while calculation two is dual to a boundary dynamics analogous to our second model.  The ``baby universe'' CFTs in our second model do not appear in \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni} because they did not explicitly construct a holographic dual of calculation two.  Had they done so, there would have needed to be a boundary analogue of the degrees of freedom behind the horizon (which are independent from those outside the horizon in perturbative bulk quantum gravity), and in our second model these are our ``baby universe'' CFTs.  The reason \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni} were able to nonetheless find a Page curve similar to what calculation one would produce is that they allowed themselves to use the quantum extremal surface prescription \textit{assuming} that the auxiliary system is homologous to $\gamma'$, as it is in our first model, even though actually it isn't for the boundary model which is dual to the calculation they actually did. 
 
-What then have we learned?  Our main point is that our first model gives us a situation where a controlled calculation analogous to calculation one from the previous paragraph is possible: we use explicit boundary evolution to carry us through a sequence of CFT states, each of which has a standard and well-known bulk dual, and we use the replica trick to compute the boundary entropy using the HRT formula.  In this model we understand that we are indeed allowed to use the extremal surface $\gamma'$ analogous to the one constructed in \cite{Almheiri:2019psf,Penington:2019npb}, giving us a Page curve that decreases both from the bulk and the boundary point of view, while preserving a smooth interior. We think this is a good model for many aspects of how black holes evaporate in quantum gravity.   Secondly, we've learned (unsurprisingly) from our second model that we should not take perturbative bulk dynamics literally.  Doing so produces information loss, and when a holographic dual is properly constructed it supports this, but it is not compatible with the calculation we actually want to do (calculation one of the previous paragraph).\footnote{We believe we are in agreement with the authors of \cite{Almheiri:2019psf} on this point (we're pretty sure about one of them), we are less sure about \cite{Penington:2019npb}.  Indeed in \cite{Penington:2019npb} there is some suggestion that the final radiation actually is mixed, but in some way that that the CFT state which contains it is still pure.  This does not seem compatible with the argument at the beginning of this conclusion: the low energy CFT states in which the radiation is stored are well-described by bulk effective field theory, as indeed can be confirmed directly from a study of local boundary correlators, and there does not seem to be a way for one to be mixed while the other is pure.}  To phrase it more positively, the analysis of \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni} has given to us a beautiful new quantum extremal surface to consider, but what we have learned from our two models is that in order to make use of this surface we need to allow for bulk dynamics which go beyond those considered by Hawking.  Indeed the candidate HRT surface $\gamma'$ in our models is precisely analogous to the one constructed in \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni}, but it was only in our first model that we were allowed to use it in computing the Page curve.  This is all to the good: in order for information to escape from black holes, there \textit{must} be sizable modifications of the bulk dynamics beyond perturbative effective field theory.  The evolution in our first model is such a modification: each time step couples the boundary CFTs together in a non-local way that cannot be interpreted merely as a change of boundary conditions.  The task now seems to be to get a better handle on what this dynamics would look like in a more realistic model. 
+What then have we learned?  Our main point is that our first model gives us a situation where a controlled calculation analogous to calculation one from above is possible: we use explicit boundary evolution to carry us through a sequence of CFT states, each of which has a standard and well-known bulk dual, and we use the replica trick to compute the boundary entropy using the HRT formula.  In this model we understand that we are indeed allowed to use the extremal surface $\gamma'$ analogous to the one constructed in \cite{Almheiri:2019psf,Penington:2019npb}, giving us a Page curve that decreases both from the bulk and the boundary point of view, while preserving a smooth interior. We think this is a good model for many aspects of how black holes evaporate in quantum gravity.   Secondly, we've learned (unsurprisingly) from our second model that we should not take perturbative bulk dynamics literally.  Doing so produces information loss, and when a holographic dual is properly constructed it supports this, but it is not compatible with the calculation we actually want to do (calculation one of the previous paragraph).\footnote{We believe we are in agreement with the authors of \cite{Almheiri:2019psf} on this point (we're pretty sure about one of them), we are less sure about \cite{Penington:2019npb}.  Indeed in \cite{Penington:2019npb} there is some suggestion that the final radiation actually is mixed, but in some way that that the CFT state which contains it is still pure.  This does not seem compatible with the argument at the beginning of this conclusion: the low energy CFT states in which the radiation is stored are well-described by bulk effective field theory, as indeed can be confirmed directly from a study of local boundary correlators, and there does not seem to be a way for one to be mixed while the other is pure.}  To phrase it more positively, the analysis of \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni} has given to us a beautiful new quantum extremal surface to consider, but what we have learned from our two models is that in order to make use of this surface we need to allow for bulk dynamics which go beyond those considered by Hawking.  Indeed the candidate HRT surface $\gamma'$ in our models is precisely analogous to the one constructed in \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni}, but it was only in our first model that we were allowed to use it in computing the Page curve.  This is all to the good: in order for information to escape from black holes, there \textit{must} be sizable modifications of the bulk dynamics beyond perturbative effective field theory.  The evolution in our first model is such a modification: each time step couples the boundary CFTs together in a non-local way that cannot be interpreted merely as a change of boundary conditions.  The task now seems to be to get a better handle on what this dynamics would look like in a more realistic model. 
 
 
 %We claim that the resolution of this tension is as follows: their explicit bulk calculations should be interpreted as proceeding as in our second model, but in assigning a holographic interpretation they assume that the radiation CFTs by themselves are homologous to $\gamma'$, as they were in our first model (but not our second).  That the bulk dynamics of \cite{Almheiri:2019psf,Penington:2019npb,Almheiri:2019hni} are analogous to our second model is clear from the fact that taken literally, they predict a mixed state for the final Hawking radiation cloud.
