--- a/2004.02900/WHC.tex
+++ b/2004.02900/WHC.tex
@@ -1,14 +1,41 @@
 %%%%%%%%%%%latex file%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\documentstyle[12pt]{article}
 %\documentclass[12pt,epsf,epsfig]{article}
-\documentclass[11pt]{article}
-\pdfoutput=1
+\documentclass[12pt]{article}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[largesc]{newpxtext}
+\usepackage[smallerops]{newpxmath}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\sloppy
+
+% these include amsmath and that can cause trouble in older docs.
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\input{../helpers/cmrsum}
+
 %\usepackage{epsf,epsfig}
  \usepackage{mciteplus}
  \usepackage{tikz}
  \usepackage{color}
  \definecolor{darkblue}{rgb}{0.1,0.1,.7}
- \usepackage[colorlinks, linkcolor=darkblue, citecolor=darkblue, urlcolor=darkblue, linktocpage,hyperfootnotes=false]{hyperref} 
 \usepackage{epsfig}
 \usepackage{graphicx}
 \usepackage{cite}
@@ -18,11 +45,7 @@
 %\usepackage[dvips]{graphicx}
 \usepackage{latexsym}
 %\usepackage{showlabels}
-\setlength{\oddsidemargin}{-0.05cm} \setlength{\textwidth}{16.5cm}
-\setlength{\topmargin}{-1.0 cm}
-\setlength{\textheight}{21.5cm}%
 %\def\be{\begin{equation}}
-\usepackage{amsmath}
 \numberwithin{equation}{section}
 \def\bq{\begin{quote}}
 \def\eq{\end{quote}}
