--- a/math-ph-9902027/gauge.tex
+++ b/math-ph-9902027/gauge.tex
@@ -41,7 +41,8 @@ bookmarksopenlevel=10
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[largesc]{newpxtext}
-\usepackage[smallerops]{newpxmath}
+\usepackage{eulervm}
+%\usepackage[smallerops]{newpxmath}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \sloppy
@@ -861,8 +862,8 @@ These three relations are not independent as either (\ref{eq:ho}) or
 useful to write down all three.
 
 For simplicity we shall sometimes use abbreviated expressions such as
-``fiber bundle \(E\)" or ``fiber bundle \(E\) over \(X\) with fiber
-\(F\)" without specifying all of the data required by the definition.
+``fiber bundle \(E\)'' or ``fiber bundle \(E\) over \(X\) with fiber
+\(F\)'' without specifying all of the data required by the definition.
 It is to be understood however that such data is always present.
 
 
@@ -925,7 +926,7 @@ It is easy to see that the resulting space
 \(E\) is the Moebius strip. This should be considered as the
 prototypical example of gluing together 
 a fiber bundle, the general one is seen to be
-the result of gluing together many cartesian products ``twisted" by the
+the result of gluing together many cartesian products ``twisted'' by the
 transition maps. If all the transition maps \(h_{\alpha\beta}(x)\) are
 the identity then the construction of the previous theorem obviously
 leads to \(E=X\times F\). 
@@ -1013,8 +1014,8 @@ family of local trivializations in the extended sense, we again have
 data defining a fiber bundle with a larger set of local trivializations.
 By definitions that follow shortly, this new bundle will be
 equivalent to the original one. In what follows we shall conventionally
-drop the adjective ``local" from the expression ``local trivialization",
-and speak simply of a ``trivialization".
+drop the adjective ``local'' from the expression ``local trivialization'',
+and speak simply of a ``trivialization''.
 \index{trivialization}%
 
 
@@ -1225,15 +1226,15 @@ the fact that though a bundle may be isomorphic to a product bundle, one
 should not think that certain relations that are natural to the
 cartesian product carry over to a trivial bundle. Thus while it is
 natural to think of the subset \([0,1]\times\{1\}\subset
-[0,1]\times\lR\) as ``horizontal" being of the form \(\pi_{\lRe}^{-1}
+[0,1]\times\lR\) as ``horizontal'' being of the form \(\pi_{\lRe}^{-1}
 (\{1\})\) where \(\pi_{\lRe}:[0,1]\times\lR\to \lR\) is the canonical
 projection, in a trivial bundle there is in general 
 no canonical projection on the
 fiber.  Thus the image of the same set by the \(h_i\) are in no way
-``horizontal". Metaphorically speaking, a trivial bundle is a cartesian
+``horizontal''. Metaphorically speaking, a trivial bundle is a cartesian
 product which lost one of its canonical projections.
 Though a trivial bundle has a  trivialization over the 
-full base space, which could be called a ``global" trivialization,
+full base space, which could be called a ``global'' trivialization,
 there is in general no one canonical such.
 
 \begin{example}
@@ -1290,7 +1291,7 @@ fiber \(F\). Introducing local coordinates \(y^1,\dots,y^m\) in \(F\),
 the representative  can
 then be described by a set of {\em components\/} 
 \(s_W(x)= (s^1_W(x),\dots,s^m_W(x))\). In the sequel we shall usually
-drop the adjective ``local" and speak simply of a section. Global
+drop the adjective ``local'' and speak simply of a section. Global
 sections will be referred to as such. 
 
 We shall in the sequel often have to deal with how mathematical
@@ -1909,7 +1910,7 @@ These are vectors tangent to the fiber \(F_{\pi(p)}\), which is a
 submanifold.
 On the other
 hand, there is in general no canonical way of choosing a complementary
-``horizontal" subspace (see the discussion following
+``horizontal'' subspace (see the discussion following
 Example \ref{ex:trivnottriv}).  By a {\em connection\/}
 \index{connection}%
  on \(E\) we mean a
@@ -3009,7 +3010,7 @@ by a function \(s(x)=s^i(x)f_i\) of \(U\) to \(F\). Consider the
 partial derivative \(\frac{\partial s}{\partial x^j}=
 \sum_i\frac{\partial s^i}{\partial x^j}f_i\), 
 which would be a naive
-``directional derivative". In another trivialization over the same open
+``directional derivative''. In another trivialization over the same open
 set one has another representative \(\tilde s(x) =\sum_i\tilde s^i(x)f_i\)
  where 
 \(\tilde s^i(x) = \sum h^i{}_k(x)s^k(x)\), and where the \(h^i{}_k\)
@@ -3575,7 +3576,7 @@ raising indices\/}.
  This is because if
 \(\alpha=\sum_i\alpha_i\,dx^i\), then it is customary to write
 \(r(\alpha) = \sum_i\alpha^i\ppv{x}{i}\) and so the index of
-\(\alpha_i\) was ``raised". Similarly \(\ell\) is known as 
+\(\alpha_i\) was ``raised''. Similarly \(\ell\) is known as 
 \index{lowering indices}%
 {\em lowering
 indices\/}.
@@ -3890,7 +3891,7 @@ Associated to a Lagrangian  density and the fields
 S(\psi) = \int_{\lR^n} \cL(x,\partial_\alpha\psi^a(x))\,dx
 \end{equation}%
 which defines a functional on the set of fields.
-The word ``action" here is borrowed from  physics where it means a quantity
+The word ``action'' here is borrowed from  physics where it means a quantity
 which has the physical dimension of energy times time. It should not be
 confused with the use we make elsewhere in these notes to mean group
 action or its analogs.
@@ -4239,7 +4240,7 @@ of (\ref{eq:bspin}) and \(\Lambda \in G\) then \(\Lambda\psi\) is also a
 solution and we say that \(G\) is a {\em global\/}
 \index{group!global symmetry}%
  symmetry group of the
-system. By ``global" one means in this case that the same matrix
+system. By ``global'' one means in this case that the same matrix
 \(\Lambda\) is applied to \(\psi(x)\) for all points \(x\).  If however
 now we apply a \(G\)-valued function \(\Lambda(x)\) to \(\psi(x)\) and
 consider the new function \(\tilde\psi(x)=\Lambda(x)\psi(x)\), then
@@ -4482,7 +4483,7 @@ such that \({\bf B}={\bf \nabla}\times {\bf A}\) since then by Stokes's
 theorem the flux of \({\bf B}\) through a spherical surface centered at
 the origin would be zero, contradicting it's explicit form 
 (\ref{eq:mpole}). Dirac's solution to this problem was to introduce a
-magnetic potential that is singular along a curve (the ``Dirac string")
+magnetic potential that is singular along a curve (the ``Dirac string'')
 joining the origin to infinity. Such a singularity is non-physical
 since the curve can be chosen arbitrarily. Reformulating the monopole in
 terms of principal bundles does away with this singularity. 
@@ -5697,7 +5698,7 @@ i\frac{\partial}{\partial y} \\
 
 One easily calculates that \(D^2 = \Delta I\) where \(\Delta\) is the
 three-dimensional Laplacian. It is this property of being a ``square
-root" of the Laplacian that is at the root of the great usefulness of
+root'' of the Laplacian that is at the root of the great usefulness of
 the this operator. 
 
 
