--- a/math-ph-9902027/gauge.tex
+++ b/math-ph-9902027/gauge.tex
@@ -45,7 +45,7 @@ bookmarksopenlevel=10
 \usepackage{eulervm}
 %\usepackage[smallerops]{newpxmath}
 \linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.2in, 10in}, left=.6in, right=.6in, top=1in, bottom=1in]{geometry}
 \sloppy
 
 % these include amsmath and that can cause trouble in older docs.
