--- a/1406.2663/draft.tex
+++ b/1406.2663/draft.tex
@@ -1,6 +1,45 @@
 \documentclass[12pt]{article}
-\usepackage[pdftex,colorlinks=true,linkcolor=blue,citecolor=blue,urlcolor=blue]{hyperref}
-\usepackage{amsmath,amsfonts,amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[largesc]{newpxtext}
+\usepackage[smallerops]{newpxmath}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}\usepackage{amsmath,amsfonts,amssymb}
 \usepackage{graphicx}
 \usepackage{psfrag}
 \usepackage{enumerate}
@@ -76,10 +115,6 @@
 % \usepackage{epsfig}  USAGE: \psfig{file=XXX.eps,width=14cm,angle=0}
 %\tighten  \usepackage[hypertexnames=false]{hyperref}
 %
-
-\textwidth = 16.5truecm \textheight = 22truecm
-\voffset = -1truecm
-\hoffset = -1.5truecm
 
 \def\[{\left [}
 \def\]{\right ]}
@@ -232,10 +267,10 @@ The AdS/CFT correspondence relates quantum entanglement between boundary Conform
 
 \setcounter{footnote}{0}
 \newpage
-\clearpage
-\setcounter{page}{1}
+
 
 \tableofcontents
+\newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
