--- a/quant-ph-0702225/ent-review-last.tex
+++ b/quant-ph-0702225/ent-review-last.tex
@@ -21,7 +21,7 @@ bookmarksopenlevel=10
 \sloppy
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 \input{../helpers/fix-revtex-12.tex}
 
