--- a/1406.2663/draft.tex
+++ b/1406.2663/draft.tex
@@ -24,7 +24,7 @@ bookmarksopenlevel=10
 \hbadness=2000
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/cmrsum}
+%\input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
