--- a/hott-book/main.tex
+++ b/hott-book/main.tex
@@ -60,7 +60,7 @@
 \usepackage[scaled=0.95]{helvet}
 \usepackage{courier}
 \linespread{1.05} % Palatino looks better with this
-\usepackage{eulervm}
+%\usepackage{eulervm}
 
 \usepackage{ifpdf}
 
