--- a/hott-book/hott-ebook.tex
+++ b/hott-book/hott-ebook.tex
@@ -16,7 +16,7 @@
 
 % FORMATTING DEPENDENT ON PAPER SIZE
 \input{opt-ebook}
-\input{mnsymbol.tex}
+%\input{cmrsum}
 
 % IMAGE FOR HALF-TITLE
 \def\OPThalftorus{torus-lores-bw}
