--- a/hott-book/main.tex
+++ b/hott-book/main.tex
@@ -61,6 +61,7 @@
 \usepackage{courier}
 \linespread{1.05} % Palatino looks better with this
 \usepackage{eulervm}
+\input ../helpers/lucidasum.tex
 
 \usepackage{ifpdf}
 
