--- a/hott-book/hott-arxiv.tex
+++ b/hott-book/hott-arxiv.tex
@@ -91,6 +91,7 @@
 \usepackage{courier}
 \linespread{1.05} % Palatino looks better with this
 \usepackage{eulervm}
+\input ../helpers/lucidasum.tex
 
 \usepackage{ifpdf}
 
